Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2053

Significant memory leak in new crypto code

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0, Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • 3
    • 4295

      The new cryptoapi code introduced a memory allocation in cfs_crypto_hash_init for hdesc that's never freed anywhere other than on error path in cfs_crypto_hash_init itself.

            green Oleg Drokin
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: